--- a/{{cookiecutter.project_name}}/requirements/install.txt
+++ b/{{cookiecutter.project_name}}/requirements/install.txt
@@ -1,4 +1,16 @@
 #
 
 
+PasteDeploy==1.5.2
+hupper==0.4.2
+pyramid==1.8.1
+repoze.lru==0.6
+translationstring==1.3
+venusian==1.0
+WebOb==1.7.1
+waitress==1.0.2
+zope.deprecation==4.2.0
+zope.interface==4.3.3
+
+
 # EOF
